--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/font": "^7.3.67",
+    "@storyblok/vue": "^6.0.0",
     "axios": "^1.6.2",
     "core-js": "^3.8.3",
     "register-service-worker": "^1.7.2",
