--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"register-service-worker": "^1.7.2",
 		"vue": "^3.2.13",
 		"vue-router": "^4.0.3",
+		"vue-toastification": "^2.0.0-rc.5",
 		"vuetify": "^3.4.6",
 		"vuex": "^4.1.0"
 	},
